# ROS2

./: .clang-format  .gitattributes  .gitignore  EXTERNAL_PKG_DRIVER_GUIDE.md  INSTALL_LASER_MERGER.md  README.md  README_COMPONENTS.md  README_INSTALLATION_GUIDE.md  TF_SENSOR_FUSION.md  frames_2025-09-15_14.42.59.gv  launch_nodes.py  map_1748464748.yaml  my_map.pgm  my_map.yaml  my_slam_map.pgm  my_slam_map.yaml  my_slam_map2.pgm  my_slam_map2.yaml  nav2_test.yaml  office.pgm  office.yaml  office2.pgm  office2.yaml  office_mapper_params.yaml  reconfig_lidar.sh  service.sh  setup.sh  setup_camera.sh  setup_lidar.sh  titan.sh  toggle_dio.sh
drivers/: !pwm.cpp  !pwm.h  Colore.cpp  Colore.h  Makefile  README.md  VMXManager.cpp  VMXManager.h  analog_input.cpp  analog_input.h  analog_input.hpp  cobra.cpp  cobra.h  cobra.hpp  dio.cpp  dio.h  dio.hpp  duty_cycle_encoder.cpp  duty_cycle_encoder.h  duty_cycle_encoder.hpp  encoder.cpp  encoder.h  encoder.hpp  i2c.cpp  i2c.h  i2c.hpp  imu.cpp  imu.h  imu.hpp  parsec.cpp  parsec.h  pwm.cp  pwm.cpp  pwm.h  pwm.hpp  servo.cpp  servo.h  servo.hpp  sharp.cpp  sharp.h  (+7 more)
drivers/examples/: Makefile
drivers/examples/!pwm_example/: Makefile
drivers/examples/cobra_example/: cobra_example  cobra_example.cpp
drivers/examples/colore_example/: Colore_can_test.cpp
drivers/examples/imu_example/: Makefile  imu_example  imu_example.cpp
drivers/examples/parsec_example/: Makefile  example_parsec.cpp
drivers/examples/servo_example/: continuous  continuous.cpp  linear  linear.cpp  standard  standard.cpp
drivers/examples/sharp_example/: sharp_example  sharp_example.cpp
drivers/examples/titan_example/: example_titan2.cpp  titan_example  titan_example.cpp
drivers/examples/ultrasonic_example/: ultrasonic_example  ultrasonic_example.cpp
examples/: drive_demo.py  motor_demo.py
frames/: frames_2025-05-27_16.39.29.gv
maps/: office_map.pgm  office_map.yaml
nav2_params/: mapper_params_online_sync.yaml  nav2_lattice.yaml  nav2_params.yaml
ros_dependencies/: README.md
ros_dependencies/RTAB_map/: README.md  rtab.launcher.py
ros_dependencies/depth_camera/: ros-humble-orbbec-camera-msgs_jammy_arm64.deb
scripts/: setup_permissions.sh
src/studica_control/: CMakeLists.txt  package.xml
src/studica_control/config/: ekf.yaml  mapper_params_online_async.yaml  merger_params.yaml  params.yaml  params_template.yaml  ydlidar_f.yaml  ydlidar_r.yaml
src/studica_control/include/studica_control/: !!studica_control_node.h  !cobra_sensor_node.h  !i2c.h  !imu_driver_node.h  !titan.h  DIOPin.h  analog_component.h  analog_input.h  cobra_component.h  cobra_component.hpp  cobra_sensor_node.h  dc_encoder_component.h  dc_encoder_component.hpp  device.h  diff_drive_component.h  diff_drive_odometry.h  dio_component.h  dio_component.hpp  encoder_component.h  encoder_component.hpp  gamepad_component.h  gamepad_component.hpp  imu_component.h  imu_component.hpp  imu_driver_node.h  mecanum_drive_component.h  mecanum_drive_odometry.h  servo!.h  servo_component.h  servo_component.hpp  sharp_component.h  sharp_component.hpp  sharp_sensor_node.h  studica_control_node.h  titan_component.h  titan_component.hpp  ultrasonic.h  ultrasonic_component.h  ultrasonic_component.hpp
src/studica_control/launch/: gamepad_launch.py  lidar_launch.py  lidar_launch.py.save  mapping2_launch.py  mapping_launch.py  nav2_launch.py  nodes.launch.py  office_mapping_launch.py  studica_launch.py  tf_launch.py
src/studica_control/msg/: DutyCycleEncoderMsg.msg  InitializeParams.msg
src/studica_control/src/: !dio.cpp  !i2c.cpp  !servo.cpp  analog_input.cpp  cobra_sensor_node.cpp  comp_test.cpp  dio_input.cpp  dynamic_publisher.cpp  encoder.cpp  imu_driver_node copy.cpp  imu_driver_node.cpp  manual_composition.cpp  manual_composition2.cpp  server.cpp  service_client.cpp  servo.cpp  servo_component.cpp  sharp_component.cpp  sharp_sensor_node.cpp  studica_control_node.cpp  test.cpp  test.py  ultrasonic.cpp  ultrasonic_pwm.cpp  ultrasonic_simple.cpp
src/studica_control/src/components/: cobra_component.cpp  dc_encoder_component.cpp  diff_drive_component.cpp  diff_drive_odometry.cpp  dio_component.cpp  encoder_component.cpp  gamepad_component.cpp  imu_component.cpp  mecanum_drive_component.cpp  mecanum_drive_odometry.cpp  servo_component.cpp  sharp_component.cpp  titan_component.cpp  ultrasonic_component.cpp
src/studica_control/src/components/examples/: cobra_example.py  dc_encoder_example.py  dio_example.py  encoder_example.py  gamepad_example.py  imu_example.py  servo_example.py  sharp_example.py  titan_example.py  ultrasonic_example.py
src/studica_control/src/components/examples/cpp/: cobra_example.cpp  dc_encoder_example.cpp  dio_example.cpp  encoder_example.cpp  gamepad_example.cpp  imu_example.cpp  servo_example.cpp  sharp_example.cpp  titan_example.cpp  ultrasonic_example.cpp
src/studica_control/src/components/examples/python/: dio_example.py  gamepad_example.py  servo_example.py  sharp_example.py  titan_example.py  ultrasonic_example.py
src/studica_control/src/drivers/: analog_input.cpp  analog_input.h  encoder.cpp  encoder.h  imu.cpp  imu.h  servo.cpp  servo.h  ultrasonic.h
src/studica_control/src/nodes/: encoder_node.cpp  encoder_node.h
src/studica_control/src/refactor/: !DIOPin.cpp  !cobra_sensor_node.cpp  !dio_output.cpp  !i2c.cpp  !pwm.cpp  !titan.cpp
src/studica_control/src/servo/: ContinuousServo.py  LinearServo.py  Servo.py  Teddy.py
src/studica_control/srv/: SetData.srv
