<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>studica_control</name>
  <version>1.0.0</version>
  <description>
    Hardware abstraction layer for Studica Robotics VMX sensors and actuators.
    Provides configurable ROS2 components for Titan motor controllers, IMU, encoders,
    servos, ultrasonic/IR range sensors, digital I/O, and gamepad input.
  </description>

  <maintainer email="info_ca@studica.com">Studica Robotics</maintainer>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/Studica-Robotics/ROS2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
